--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.5.1 (unreleased) [beta]
 
+** Update gnulib files.
+
 * Version 1.5.0 (released 2010-03-31) [beta]
 
 ** doc: Explain GS2-related changes.
