--- a/lib/NEWS
+++ b/lib/NEWS
@@ -4,6 +4,8 @@ See the end for copying conditions.
 
 * Version 1.5.1 (unreleased) [beta]
 
+** Update gnulib files.
+
 ** API and ABI modifications.
 No changes since last version.
 
