--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,90 @@
+2010-04-21  Simon Josefsson <simon@josefsson.org>
+
+	* lib/ChangeLog: Generated.
+
+2010-04-21  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS, lib/NEWS: Version 1.5.1.
+
+2010-04-21  Simon Josefsson <simon@josefsson.org>
+
+	* lib/NEWS: Add.
+
+2010-04-21  Simon Josefsson <simon@josefsson.org>
+
+	* gl/m4/gnulib-comp.m4, gl/m4/ioctl.m4, gl/m4/visibility.m4,
+	gl/override/m4/visibility.m4.diff, gltests/test-lseek.sh,
+	gltests/test-select-in.sh, lib/gl/m4/visibility.m4,
+	lib/gl/override/m4/visibility.m4.diff: Update gnulib files.
+
+2010-04-19  Simon Josefsson <simon@josefsson.org>
+
+	* gl/Makefile.am, gl/getopt.c, gl/getopt_int.h, gl/m4/netdb_h.m4,
+	gl/stdbool.in.h, gltests/setenv.c, gltests/test-stdbool.c,
+	gltests/test-stdint.c, lib/gl/stdbool.in.h,
+	lib/gltests/test-stdbool.c, lib/gltests/test-stdint.c,
+	lib/maint.mk, maint.mk: Update gnulib files.
+
+2010-04-14  Simon Josefsson <simon@josefsson.org>
+
+	* lib/NEWS: Add.
+
+2010-04-14  Simon Josefsson <simon@josefsson.org>
+
+	* gl/getopt.c, gl/m4/getopt.m4, gltests/test-getopt.h,
+	gltests/test-getopt_long.h, lib/gl/gc-libgcrypt.c: Update gnulib
+	files.
+
+2010-04-13  Simon Josefsson <simon@josefsson.org>
+
+	* lib/maint.mk, maint.mk: Update gnulib files.
+
+2010-04-12  Simon Josefsson <simon@josefsson.org>
+
+	* lib/gs2/client.c, lib/gs2/gs2helper.c, lib/gs2/gs2helper.h,
+	lib/gs2/mechinfo.c, lib/gs2/server.c: GS2: Fix decoding of invalid
+	data in server.  Code review fixes.
+
+2010-04-12  Simon Josefsson <simon@josefsson.org>
+
+	* .gitignore: Add.
+
+2010-04-12  Simon Josefsson <simon@josefsson.org>
+
+	* .x-sc_prohibit_empty_lines_at_EOF, GNUmakefile, NEWS,
+	doc/cyclo/Makefile.am, doc/reference/Makefile.am, gl/Makefile.am,
+	gl/fseeko.c, gl/m4/fseeko.m4, gl/m4/gnulib-common.m4,
+	gl/m4/gnulib-comp.m4, gl/m4/lib-link.m4, gl/m4/mbrtowc.m4,
+	gl/m4/mbsinit.m4, gl/m4/memchr.m4, gl/m4/stdio_h.m4,
+	gl/m4/stdlib_h.m4, gl/m4/strdup.m4, gl/m4/string_h.m4,
+	gl/m4/strtok_r.m4, gl/m4/threadlib.m4, gl/m4/time_h.m4,
+	gl/m4/unistd_h.m4, gl/m4/vasnprintf.m4, gl/stdio-impl.h,
+	gl/stdio.in.h, gl/stdlib.in.h, gl/string.in.h, gl/sys_socket.in.h,
+	gl/sys_time.in.h, gl/unistd.in.h, gl/vasnprintf.c, gl/wchar.in.h,
+	gl/wctype.in.h, gltests/Makefile.am, gltests/init.sh,
+	gltests/ioctl.c, gltests/sys_ioctl.in.h, gltests/sys_stat.in.h,
+	gltests/test-vasnprintf.c, gltests/time.in.h, lib/GNUmakefile,
+	lib/NEWS, lib/build-aux/c++defs.h, lib/build-aux/warn-on-use.h,
+	lib/gl/Makefile.am, lib/gl/m4/getpagesize.m4,
+	lib/gl/m4/gnulib-common.m4, lib/gl/m4/gnulib-comp.m4,
+	lib/gl/m4/lib-link.m4, lib/gl/m4/memchr.m4, lib/gl/m4/printf.m4,
+	lib/gl/m4/stdio_h.m4, lib/gl/m4/stdlib_h.m4, lib/gl/m4/string_h.m4,
+	lib/gl/m4/strnlen.m4, lib/gl/m4/threadlib.m4,
+	lib/gl/m4/unistd_h.m4, lib/gl/m4/vasnprintf.m4, lib/gl/stdio.in.h,
+	lib/gl/stdlib.in.h, lib/gl/string.in.h, lib/gl/unistd.in.h,
+	lib/gl/vasnprintf.c, lib/gl/wchar.in.h, lib/gltests/Makefile.am,
+	lib/gltests/test-vasnprintf.c, lib/maint.mk, maint.mk: Update gnulib
+	files and fix new syntax-check warnings.
+
+2010-03-31  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS, configure.ac, lib/NEWS, lib/configure.ac, lib/src/gsasl.h: 
+	Bump versions.
+
+2010-03-31  Simon Josefsson <simon@josefsson.org>
+
+	* ChangeLog: Generated.
+
 2010-03-31  Simon Josefsson <simon@josefsson.org>
 
 	* lib/ChangeLog: Generated.
