--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,6 +2,11 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
 See the end for copying conditions.
 
+* Version 1.5.2 (unreleased) [beta]
+
+** API and ABI modifications.
+No changes since last version.
+
 * Version 1.5.1 (released 2010-04-21) [beta]
 
 ** libgsasl: No longer require the same or newer libgcrypt it was built with.
