--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 1.5.2 (unreleased) [beta]
+* Version 1.5.2 (released 2010-09-27) [beta]
 
 ** gsasl: Avoid fixed size buffers.
 This caused problems on Windows where the BUFSIZ was too small for
